// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box component Should accept a react Element as renderAs prop 1`] = `
<DocumentFragment>
  <p
    class="box"
  >
    CustomThis should be a p element
  </p>
</DocumentFragment>
`;

exports[`Box component Should concat Bulma class with classes in props 1`] = `
<DocumentFragment>
  <div
    class="box other-class test"
  >
    Facebook
  </div>
</DocumentFragment>
`;

exports[`Box component Should have box classname 1`] = `
<DocumentFragment>
  <div
    class="box"
  >
    Facebook
  </div>
</DocumentFragment>
`;

exports[`Box component Should have custom inline styles 1`] = `
<DocumentFragment>
  <section
    class="box"
    style="width: 200px; z-index: 1;"
  >
    This should be a section with custom styles
  </section>
</DocumentFragment>
`;

exports[`Box component Should render as an html section 1`] = `
<DocumentFragment>
  <section
    class="box"
  >
    This should be a section
  </section>
</DocumentFragment>
`;
